DoubleLinkedList en proceso J - Estoy trabajando en la clase DoubleLinkedList.h, solo me falta el sort, si pueden revisar si todo les hace sentido por mi está perfecto. Falta adaptar el main y completar la clase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TC1031)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(TC1031 main.cpp)
+add_executable(TC1031 main.cpp DoubleLinkedList.h Node.h)
